
2.0-rc4 (1.93)
==============
Changes:
 * Moved K3b Handbook to http://userbase.kde.org/K3b
 * Improved checking/unchecking items using Space key. Previously to do that the current item had to be in first column.

Bugfixes:
 * Cannot choose between cdrecord when both cdrecord and wodim are installed (239861)
 * Crash when files have been removed right before burning the project (240398)
 * Crash when moving a file into a directory with shift key pressed (239075)

2.0-rc3 (1.92)
==============
Bugfixes:
 * In some cases medium doesn't get accepted for multisession burning (230742)
 * Data files in VCD ripping view are not listed
 * Show "Modify Permissions" button in System Problem Dialog only when it makes sense (230706)
 * Crash after "Cancel" was clicked while adding audio files to AudioCD project (231348)
 * Error window at the start when a place on the left pane is not accessible (230194)
 * Incorrect minimum size of welcome widget (231939)
 * Hangs while ripping AudioCD with data tracks (231174)
 * Crash when auto-removing non-existing files from a project before the burning (236005)
 * Empty Blu-ray medium not detected properly (236069)
 * eMovix project cannot be burned (236823)
 * M3U playlist not read properly (237654)
 * K3b overwrites iso ignoring user choice on dvd copy with option "only create image" checked (185251)
 * Compilation fails with FFmpeg version SVN-r23001 (236036)
 * Crash when waiting for reload the medium

2.0-rc2 (1.91)
==============
Bugfixes:
 * Added missing translation files for libk3b, libk3bdevice and K3bSetup

2.0-rc1 (1.90)
==============
Changes:
 * K3bSetup ported to KAuth framework

Bugfixes:
 * Crash on start of Audio Ripping Dialog (226595)
 * Incorrect ordering of files added to Audio Project (224649)
 * Too wide Image Burn Dialog when file path was long (225735)
 * Crash when creating image files for AudioCD project (219500)
 * Crash when manipulating VCD project items (227855)