@@ -28,7 +28,8 @@ Changes:
 Bugfixes:
  * Cannot choose between cdrecord when both cdrecord and wodim are installed (239861)
  * Crash when files have been removed right before burning the project (240398)
- * Crash when moving a file into a directory with shift key pressed (239075)
+ * Crash when moving a file into a directory with Shift key pressed (239075)
+ * Invalid parameter to cdrecord for non-integer burning speed (240310)
 
 2.0-rc3 (1.92)
 ==============
